syntax = "proto3";

package user_package;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc CheckUser (CheckUserRequest) returns (CheckUserResponse);
  rpc CheckUserLogin (CheckUserLoginRequest) returns (CheckUserLoginResponse); 
  rpc GetUserById (UserIdRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc UpdateUserAddress (UpdateUserAddressRequest) returns (AddressResponse);
  rpc DeleteUserAddress (DeleteAddressRequest) returns (DeleteAddressResponse);
  rpc DeleteUser (UserIdRequest) returns (DeleteUserResponse);
  rpc ResendOtp (ResendOtpRequest) returns (ResendOtpResponse);
  rpc CheckGoogleSignIn (CheckGoogleSignInRequest) returns (CheckGoogleSignInResponse);
  rpc GetAllUsers (EmptyRequest) returns (GetAllUsersResponse);
  rpc BlockUser (BlockUserRequest) returns (BlockUserResponse);
  rpc ForgotPasswordUser (ForgotPasswordUserRequest) returns (ForgotPasswordUserResponse);
  rpc VerifyOtp (VerifyOtpRequest) returns (VerifyOtpResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc AddToCart (AddToCartRequest) returns (AddToCartResponse);
  rpc GetCartItems (GetCartItemsRequest) returns (GetCartItemsResponse);
  rpc UpdateCartItemQuantity (UpdateCartItemQuantityRequest) returns (UpdateCartItemQuantityResponse);
  rpc RemoveCartItem (RemoveCartItemRequest) returns (RemoveCartItemResponse);
}

message ResendOtpRequest {  
  string email = 1;
  string name = 2;
}

message ResendOtpResponse { 
  string message = 1;
  string token = 2;
}

message CheckUserLoginRequest {
  string email = 1;
  string password = 2;
}

message CheckUserLoginResponse {
  string message = 1;
  string token = 2;
  string name = 3;
  string refreshToken = 4;
  bool isAdmin = 5;
  bool isActive = 6;
  string role = 7;
  string _id = 8;
}

message ForgotPasswordUserRequest {
  string email = 1;
}

message ForgotPasswordUserResponse {
  string message = 1;
  string token = 2;
}

message VerifyOtpRequest {
  string email = 1;
  string otp = 2;
  string token = 3;
}

message VerifyOtpResponse {
  string message = 1;
}

message ResetPasswordRequest {
  string email = 1;
  string password = 2;
  string token = 3;
}

message ResetPasswordResponse {
  string message = 1;
}

message CheckGoogleSignInRequest {
  string googleID = 1;
  string email = 2;
  string name = 3;
  string profileImage = 4;
}

message CheckGoogleSignInResponse {
  string message = 1;
  string token = 2;
  string name = 3;
  string refreshToken = 4;
  bool isAdmin = 5;
  bool isActive = 6;
  string role = 7;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string profileImage = 4;
  string googleID = 5;
  bool isActive = 6;
  string password = 7;
  repeated Address address = 8;
  bool isAdmin = 9;
  string createdAt = 10;
  string updatedAt = 11;
  Wallet wallet = 12;
  string phone = 13;
}

message UpdateUserAddressRequest {
  string userId = 1;
  Address address = 2;
  int32 index = 3; 
}

message AddressResponse {
  string message = 1;
  Address address = 2;
}

message DeleteAddressRequest {
  string id = 1;
  int32 index = 2;
}

message DeleteAddressResponse {
  bool success = 1;
  string message = 2;
}

message Address {
  string city = 1;
  int32 pinCode = 2;
  string state = 3;
  string street = 4;
}

message Wallet {
  int32 balance = 1;
  repeated Transaction transactions = 2;
}

message Transaction {
  int32 amount = 1;
  string date = 2;
  string details = 3;
  string paymentMethod = 4;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string profileImage = 3;
  string googleID = 4;
  bool isActive = 5;
  string password = 6;
  Address address = 7;
  bool isAdmin = 8;
  string otp = 9;
  string token = 10;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string profileImage = 4;
  bool isActive = 5;
  Address address = 6;
  string phone = 7; 
}

message UserIdRequest {
  string id = 1;
}

message UserResponseData {
  string id = 1;
  string name = 2;
  string email = 3;
  string profileImage = 4;
  string googleID = 5;
  bool isActive = 6;
  repeated Address address = 7;
  bool isAdmin = 8;
  string createdAt = 9;
  string updatedAt = 10;
  Wallet wallet = 11;
  string phone = 12; 
}

message UserResponse {
  string message = 1;
  bool isAdmin = 2;
  UserResponseData user = 3; 
}

message DeleteUserResponse {
  string message = 1;
}

message CheckUserRequest {
  string email = 1;
  string name = 2;
}

message CheckUserResponse {
  string message = 1;
  string token = 2;
}

message EmptyRequest {}

message GetAllUsersResponse {
  repeated User users = 1;
}

message BlockUserRequest {
  string userId = 1;
}

message BlockUserResponse {
  bool success = 1;
  string message = 2;
  bool isActive = 3;
}



message AddToCartRequest {
  string user_id = 1;
  CartItem item = 2;
}

message AddToCartResponse {
  string message = 1;
  bool success = 2;
  Cart cart = 3;
}

message CartItem {
  string menuId = 1;
  int32 quantity = 2;
  double price = 3;
  string name = 4;
  string category = 5;
  string restaurantName = 6;
  double discount = 7;
}

message Cart {
  string user_id = 1;
  repeated CartItem items = 2;
  double total_amount = 3;
  string created_at = 4;
  string updated_at = 5;
}

message GetCartItemsRequest {
  string user_id = 1;
}

message GetCartItemsResponse {
  repeated CartItem items = 1;
}

message UpdateCartItemQuantityRequest {
  string user_id= 1;
  string menuId = 2;
  int32 quantity = 3;
}

message UpdateCartItemQuantityResponse {
  string message = 1;
  bool success = 2;
  Cart cart = 3;
}

message RemoveCartItemRequest {
  string user_id = 1;
  string menuId = 2;
}

message RemoveCartItemResponse {
  string message = 1;
  bool success = 2;
  Cart cart = 3;
}